Use fand/glslify-bundle

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "from2": "^2.3.0",
     "glsl-resolve": "0.0.1",
     "glsl-token-whitespace-trim": "^1.0.0",
-    "glslify-bundle": "^5.0.0",
+    "glslify-bundle": "https://github.com/fand/glslify-bundle#sourcemaps-test",
     "glslify-deps": "^1.2.5",
     "minimist": "^1.2.0",
     "resolve": "^1.1.5",
